<resources>
    <string name="app_name">Check BIN</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="details_header">Request details:</string>
    <string name="search_hint">Enter the first 6 digits of your bank card (BIN):</string>
    <string name="search_button_text">Search</string>
    <string name="request_history_is_empty">Requests history is empty</string>
    <string name="requests_history_header">Requests history:</string>
    <string name="country_header">Country:</string>
    <string name="bank_name">Bank name:</string>
    <string name="currency_header">Currency:</string>
    <string name="website_header">Website:</string>
    <string name="card_type_header">Type:</string>
    <string name="phone_header">Phone number:</string>
    <string name="other_phone_header">Other number:</string>
    <string name="bank_city">City:</string>
    <string name="toast_attention_short_request">You must enter 6 digits !</string>
    <string name="error_message_404">There is no data for this card number</string>
    <string name="dialog_attention_title">Server response:</string>
    <string name="dialog_error_title">Error:</string>
    <string name="card_type">Type:</string>
    <string name="card_brand">Brand:</string>
</resources>