<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_20"
    tools:context=".ui.DetailsDialogFragment">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/back_button"
        android:layout_width="@dimen/back_btn_size"
        android:layout_height="@dimen/back_btn_size"
        android:layout_margin="@dimen/default_margin"
        android:src="@android:drawable/ic_menu_close_clear_cancel"
        android:tint="@color/black_n_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/details_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details_header"
        android:textSize="@dimen/header_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/back_button"
        app:layout_constraintStart_toStartOf="@+id/base_details_layout"
        app:layout_constraintTop_toTopOf="@+id/back_button" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/base_details_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16"
        app:cardElevation="@dimen/card_elevation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_button">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_margin">

            <ImageView
                android:id="@+id/image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_16"
                android:src="@drawable/ic_card"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/card_number"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/card_number"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/card_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_16"
                android:maxLength="21"
                android:textSize="@dimen/details_number_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/image"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="4320 2300 45**" />

            <TextView
                android:id="@+id/card_schema"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textColor="@color/black_n_white"
                android:textSize="@dimen/header_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/card_number"
                app:layout_constraintTop_toBottomOf="@+id/card_number"
                tools:text="visa" />

            <TextView
                android:id="@+id/card_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/card_type"
                app:layout_constraintStart_toStartOf="@+id/card_number"
                app:layout_constraintTop_toBottomOf="@+id/card_schema" />

            <TextView
                android:id="@+id/card_type_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/default_margin"
                android:layout_weight="1"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/card_brand"
                app:layout_constraintTop_toTopOf="@+id/card_type"
                tools:text="debit" />

            <TextView
                android:id="@+id/card_brand"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/card_brand"
                app:layout_constraintStart_toStartOf="@+id/card_type"
                app:layout_constraintTop_toBottomOf="@+id/card_type" />

            <TextView
                android:id="@+id/card_brand_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/default_margin"
                android:layout_weight="1"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/card_brand"
                app:layout_constraintTop_toTopOf="@+id/card_brand"
                tools:text="Platinum" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/emoji"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/tableLayout"
        app:layout_constraintTop_toTopOf="@+id/tableLayout"
        tools:drawableStart="@drawable/ic_emoji" />


    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/base_details_layout">

        <TableRow android:id="@+id/details_country">

            <TextView android:text="@string/country_header" />

            <TextView
                android:id="@+id/details_country_value"
                style="@style/CardDetailsClickableText"
                tools:text="Canada" />
        </TableRow>

        <TableRow android:id="@+id/details_currency">

            <TextView android:text="@string/currency_header" />

            <TextView
                android:id="@+id/details_currency_value"
                style="@style/CardDetailsText"
                tools:text="CAD" />
        </TableRow>

        <TableRow
            android:id="@+id/details_bank_name"
            android:layout_marginTop="@dimen/margin_20">

            <TextView android:text="@string/bank_name" />

            <TextView
                android:id="@+id/details_bank_name_value"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_weight="1"
                tools:text="CARD SERVICES FOR CREDIT UNIONS, INC." />
        </TableRow>

        <TableRow android:id="@+id/details_bank_city">

            <TextView android:text="@string/bank_city" />

            <TextView
                android:id="@+id/details_bank_city_value"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_weight="1"
                tools:text="Quebec" />
        </TableRow>

        <TableRow android:id="@+id/details_bank_website">

            <TextView android:text="@string/website_header" />

            <TextView
                android:id="@+id/details_bank_website_value"
                style="@style/CardDetailsClickableText"
                tools:text="www.cscu.net" />
        </TableRow>

        <TableRow android:id="@+id/details_bank_phone1">

            <TextView android:text="@string/phone_header" />

            <TextView
                android:id="@+id/details_bank_phone_value1"
                style="@style/CardDetailsClickableText"
                tools:text="(727) 536-6800" />
        </TableRow>

        <TableRow android:id="@+id/details_bank_phone2">

            <TextView android:text="@string/other_phone_header" />

            <TextView
                android:id="@+id/details_bank_phone_value2"
                style="@style/CardDetailsClickableText"
                tools:text="888-930-2728" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>