<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_margin"
    tools:context=".ui.MainFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:hint="@string/search_hint"
        app:boxCornerRadiusBottomStart="@dimen/default_corner_radius"
        app:boxCornerRadiusTopEnd="@dimen/default_corner_radius"
        app:endIconDrawable="@android:drawable/ic_menu_search"
        app:endIconMode="custom"
        app:endIconTint="@color/design_default_color_primary"
        app:expandedHintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="9"
            android:selectAllOnFocus="true"
            android:textSize="@dimen/search_text_number_size" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/search_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_input_layout" />

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/requests_history_header"
        android:textSize="@dimen/header_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_button" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="@dimen/default_margin"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:reverseLayout="true"
        app:stackFromEnd="true"
        tools:itemCount="3"
        tools:listitem="@layout/item_recycler" />

    <ProgressBar
        android:id="@+id/recycler_loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/design_default_color_primary"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/recycler"
        app:layout_constraintEnd_toEndOf="@+id/recycler"
        app:layout_constraintStart_toStartOf="@+id/recycler"
        app:layout_constraintTop_toTopOf="@+id/recycler"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/empty_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/default_margin"
        android:text="@string/request_history_is_empty"
        android:textColor="@color/design_default_color_primary"
        android:textSize="@dimen/header_text_size"
        android:visibility="gone"
        app:drawableTopCompat="@drawable/ic_history_100"
        app:layout_constraintBottom_toBottomOf="@+id/recycler"
        app:layout_constraintEnd_toEndOf="@+id/recycler"
        app:layout_constraintStart_toStartOf="@+id/recycler"
        app:layout_constraintTop_toTopOf="@+id/recycler"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>